# BeepBoopChess

./: .clang-format  .gitignore  Board.hh  Eval.hh  MagicNumbers.hh  Main.cpp  Makefile  Moves.hh  NegaMax.hh  README.md  Tools.hh  Uciapi.hh
.github/workflows/: cmake.yml
code/: CMakeLists.txt
code/BeepBoop/: CMakeLists.txt  algorithm_chess.cpp  algorithm_chess.hpp  board.cpp  board.hpp  board_stack.cpp  board_stack.hpp  eval.cpp  eval.hpp  game.cpp  game.hpp  magics.hpp  move.cpp  move.hpp  move_finder.cpp  move_finder.hpp  move_generator.cpp  move_generator.hpp  move_generator.t.cpp  move_list.cpp  move_list.hpp  move_list.t.cpp  random_generator.cpp  random_generator.hpp  thread_pool.hpp  timekeeping.cpp  timekeeping.hpp  transposition.cpp  transposition.hpp  utils.cpp  utils.hpp  utils.t.cpp
code/BobChess/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  algorithm_chess.cpp  algorithm_chess.hpp  board.cpp  board.hpp  board_stack.cpp  board_stack.hpp  eval.cpp  eval.hpp  game.cpp  game.hpp  magics.cpp  magics.hpp  move.cpp  move.hpp  move_finder.cpp  move_finder.hpp  move_generator.cpp  move_generator.hpp  move_generator.t.cpp  move_list.cpp  move_list.hpp  move_list.t.cpp  move_score.cpp  move_score.hpp  pesto_eval.cpp  pesto_eval.hpp  random_generator.cpp  random_generator.hpp  test.t.cpp  thread_pool.hpp  timekeeping.cpp  timekeeping.hpp  transposition.cpp  transposition.hpp  utils.cpp  utils.hpp
code/exec/: BeepBoop0_0_0.cpp  CMakeLists.txt  _test.cpp  perfttest.cpp
src/: Board.hh  Eval.hh  MagicNumbers.hh  Main.cpp  Moves.hh  NegaMax.hh  Tools.hh  Uciapi.hh
src_depricated/: Board.hh  Eval.hh  MagicNumbers.hh  Main.cpp  Random.hh  Uciapi.hh
